diana-project/force-app/main/default/objects/Account/fields/Billing_Firstname__c.field-meta.xml
<CustomField>
    <fullName>Billing_Firstname__c</fullName>
    <label>Billing Firstname</label>
    <length>40</length>
    <type>Text</type>
</CustomField>