diana-project/force-app/main/default/objects/Account/fields/Billing_Lastname__c.field-meta.xml
<CustomField>
    <fullName>Billing_Lastname__c</fullName>
    <label>Billing Lastname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>