diana-project/force-app/main/default/objects/Account/fields/Buy_Using_Mainly_Discount__c.field-meta.xml
<CustomField>
    <fullName>Buy_Using_Mainly_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if customer buys mainly products with Discounts</description>
    <inlineHelpText>Checked if customer buys mainly products with Discounts</inlineHelpText>
    <label>Buy Using Mainly Discount</label>
    <type>Checkbox</type>
</CustomField>