diana-project/force-app/main/default/objects/Account/fields/Days_Last_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Days_Last_Purchase__c</fullName>
    <formula>TODAY() - DATEVALUE (Last_Purchase_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days since the last purchase</inlineHelpText>
    <label>Days from Last Purchase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>