diana-project/force-app/main/default/objects/Account/fields/Ecommerce_ToBeSync__c.field-meta.xml
<CustomField>
    <fullName>Ecommerce_ToBeSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if there are changes to be syncronized in E-Commerce</description>
    <inlineHelpText>Checked if there are changes to be syncronized in E-Commerce</inlineHelpText>
    <label>Ecommerce ToBeSync</label>
    <type>Checkbox</type>
</CustomField>