diana-project/force-app/main/default/objects/Account/fields/Email_Key__c.field-meta.xml
<CustomField>
    <fullName>Email_Key__c</fullName>
    <externalId>true</externalId>
    <label>Email Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>