diana-project/force-app/main/default/objects/Account/fields/Frequency_Number__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Number__c</fullName>
    <label>Frequency Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>