diana-project/force-app/main/default/objects/Account/fields/Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if customer is logically deleted</description>
    <inlineHelpText>Checked if customer is logically deleted</inlineHelpText>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>