diana-project/force-app/main/default/objects/Account/fields/Last_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchase_Date__c</fullName>
    <label>Last Purchase Date</label>
    <summarizedField>Purchase__c.Creation_Date__c</summarizedField>
    <summaryForeignKey>Purchase__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>