diana-project/force-app/main/default/objects/Account/fields/Lifetime_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Amount__c</fullName>
    <inlineHelpText>The total amount spent by the user (lifetime)</inlineHelpText>
    <label>Lifetime Amount</label>
    <summarizedField>Purchase__c.OrderTotal_GrossPrice__c</summarizedField>
    <summaryForeignKey>Purchase__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>