diana-project/force-app/main/default/objects/Account/fields/Lifetime_Orders__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Orders__c</fullName>
    <inlineHelpText>The number of orders placed over the user&apos;s lifetime</inlineHelpText>
    <label>Lifetime Orders</label>
    <summaryForeignKey>Purchase__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>