diana-project/force-app/main/default/objects/Account/fields/Marketing_Discount_Notify__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Discount_Notify__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to check if the customer has already received the coupon code after his first newsletter subscription</description>
    <label>Marketing Discount Notify</label>
    <type>Checkbox</type>
</CustomField>