diana-project/force-app/main/default/objects/Account/fields/Monetary_Value__c.field-meta.xml
<CustomField>
    <fullName>Monetary_Value__c</fullName>
    <label>Monetary Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>