diana-project/force-app/main/default/objects/Account/fields/Recency__c.field-meta.xml
<CustomField>
    <fullName>Recency__c</fullName>
    <formula>IF ( DATEVALUE(Last_Purchase_Date__c) = TODAY()  || Days_Last_Purchase__c &gt; 0, IF(Days_Last_Purchase__c &lt; 180, &quot;Active&quot;, IF(Days_Last_Purchase__c &lt; 365, &quot;Sleeper&quot;, &quot;Inactive&quot;)), &quot;Inactive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Active, if the user has placed a order in the last six month.
Sleeper, if the user has placed a order between six and twelve month.
Inactive, if the user has never placed a order or has placed it before the last twelve months.</inlineHelpText>
    <label>Recency</label>
    <type>Text</type>
</CustomField>