diana-project/force-app/main/default/objects/Account/fields/RFM__c.field-meta.xml
<CustomField>
    <fullName>RFM__c</fullName>
    <formula>(IF( Recency__c = &quot;Active&quot;, 2, IF(Recency__c = &quot;Sleeper&quot;, 1, 0)) * 0.3) + 
(IF( Frequency__c = &quot;Loyal&quot;, 3, IF(Recency__c = &quot;Client&quot;, 2, IF(Recency__c = &quot;New&quot;, 1, 0))) * 0.3) +
(IF( Monetary__c = &quot;Vip&quot;, 3, IF(Recency__c = &quot;Elite&quot;, 2, IF(Recency__c = &quot;Member&quot;, 1, 0))) * 0.4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Weighted average between Recency (30%), Frequency (30%) and Monetary (40%).</inlineHelpText>
    <label>RFM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>