diana-project/force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Ecommerce_Registration_Date__pc</columns>
    <columns>Preferred_Language__pc</columns>
    <columns>Preferred_Country__pc</columns>
    <columns>Registration_Date__pc</columns>
    <columns>Source__pc</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>